--- a/css/styles.css
+++ b/css/styles.css
@@ -355,7 +355,6 @@ body {
   margin-bottom: 8px;
 }
 .portfolio-text {
-  border: 1px solid #e7e9fc;
   border-top: none;
   color: #434455;
   font-size: 16px;
@@ -458,7 +457,7 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 
 .footer-socials-list {
@@ -527,7 +526,7 @@ body {
   color: #ffffff;
   font-size: 12px;
   line-height: 2;
-  letter-spacing: 0.4em;
+  letter-spacing: 0.04em;
 }
 .subscr-input::placeholder {
   color: #fff;
@@ -554,6 +553,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.04em;
+  line-height: 1.5;
   /* box-shadow:0px 4px 4px rgba(0, 0, 0, 0.15) ; */
   cursor: pointer;
 }
@@ -614,8 +614,10 @@ body {
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn-cross .modal-icon-cross {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -685,13 +687,14 @@ body {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: #4d5ae5;
 }
 .label-icon {
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment {
@@ -711,7 +714,7 @@ body {
   padding: 8px 16px;
   outline: transparent;
   resize: none;
-  transition: border-color 250ms rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus {
@@ -749,7 +752,7 @@ input[type="checkbox"]:checked + .checkbox-label .policy-chackbox {
   fill: #f4f4fd;
 }
 .checkbox-link {
-  fill: #4d5ae5;
+  color: #4d5ae5;
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
