--- a/css/styles.css
+++ b/css/styles.css
@@ -329,9 +329,12 @@ body {
   width: calc((100% - 48px) / 3);
   border-radius: 4px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
   overflow: hidden;
   box-shadow: none;
+  cursor: pointer;
 }
+
 .portfolio-list-item img {
   width: 100%;
   height: auto;
@@ -363,15 +366,7 @@ body {
   letter-spacing: 0.02em;
   transform: translateY(0%);
 }
-.portfolio-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.portfolio-list-item:hover,
-.overlay {
-  transform: translateY(0%);
-  cursor: pointer;
-}
+
 .img-box {
   position: relative;
   overflow: hidden;
@@ -399,8 +394,13 @@ body {
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
 }
-.img-box:hover .overlay {
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.img-box:hover:hover .overlay {
   transform: translatey(0);
 }
 /*=============== Footer section=========== */
@@ -579,12 +579,12 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   pointer-events: none;
-  opacity: 0;
 }
 
-.modal {
-  opacity: 1;
-  pointer-events: auto;
+.modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .modal-window {
@@ -731,7 +731,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
-.policy-chackbox {
+.policy-checkbox {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
