--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@ body {
   gap: 24px;
   row-gap: 48px;
 }
+
 .portfolio-list-item {
   width: 100%;
   height: 100%;
@@ -334,7 +335,6 @@ body {
   box-shadow: none;
   cursor: pointer;
 }
-
 .portfolio-list-item img {
   width: 100%;
   height: auto;
@@ -400,7 +400,7 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.img-box:hover:hover .overlay {
+.portfolio-list-item:hover .overlay {
   transform: translatey(0);
 }
 /*=============== Footer section=========== */
