--- a/css/styles.css
+++ b/css/styles.css
@@ -566,27 +566,25 @@ body {
 }
 /* ==========Modal============= */
 .modal {
-  background-color: rgba(46, 47, 66, 0.4);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
   z-index: 999;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  pointer-events: none;
-}
-
-.modal /*.is-open*/ {
   opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
 .modal-window {
   position: absolute;
   top: 50%;
@@ -600,6 +598,20 @@ body {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
+}
+.modal-form {
+  background-color: rgba(252, 252, 252, 1);
+  top: 80px;
+  left: 516px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrapper-input {
+  margin-bottom: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 360px;
 }
 .modal-btn-cross {
   position: absolute;
@@ -648,20 +660,6 @@ body {
   margin-bottom: 16px;
 }
 
-.modal-form {
-  background-color: rgba(252, 252, 252, 1);
-  top: 80px;
-  left: 516px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.wrapper-input {
-  margin-bottom: 8px;
-  display: flex;
-  flex-direction: column;
-  width: 360px;
-}
 .modal-label {
   font-size: 12px;
   line-height: 1.17;
@@ -669,14 +667,6 @@ body {
   color: #8e8f99;
   display: block;
   margin-bottom: 4px;
-}
-.modal-input {
-  position: relative;
-  width: 100%;
-  margin-top: 4px;
-}
-.modal-input:focus-within .label-icon {
-  fill: #4d5ae5;
 }
 .input {
   width: 100%;
@@ -687,8 +677,16 @@ body {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input:focus {
   border-color: #4d5ae5;
 }
+.modal-input {
+  position: relative;
+  width: 100%;
+  margin-top: 4px;
+}
+
 .label-icon {
   position: absolute;
   left: 16px;
@@ -697,6 +695,9 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus-within .label-icon {
+  fill: #4d5ae5;
+}
 .modal-comment {
   margin-bottom: 16px;
   width: 100%;
@@ -720,7 +721,14 @@ body {
 .modal-textarea:focus {
   border-color: #4d5ae5;
 }
-
+.checkbox-link {
+  color: #4d5ae5;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-decoration: underline;
+}
 .wrapper-checkbox {
   margin-bottom: 24px;
   width: 100%;
@@ -750,14 +758,6 @@ input[type="checkbox"]:checked + .checkbox-label .policy-chackbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
-}
-.checkbox-link {
-  color: #4d5ae5;
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  text-decoration: underline;
 }
 
 .btn-submit {
