--- a/css/styles.css
+++ b/css/styles.css
@@ -204,13 +204,15 @@ body {
 }
 .dscr-list {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   gap: 24px;
-  justify-content: center;
-  align-items: center;
+  text-align: left;
 }
 .dscr-list-item {
   margin-bottom: 8px;
   width: calc((100% - 72px) / 4);
+  position: relative;
 }
 .dscr-icon-wrapper {
   width: 264px;
@@ -221,6 +223,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 8px;
+  border: 1px solid #8e8f99;
 }
 
 .dscr-icon {
@@ -241,7 +244,7 @@ body {
 
 /* ===========Our team============= */
 .team-section {
-  width: 1158px;
+  width: 1440px;
   background-color: #f4f4fd;
   padding: 120px 0;
   text-align: center;
@@ -597,7 +600,10 @@ body {
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
+  padding-top: 72px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-left: 24px;
 }
 .modal-form {
   background-color: rgba(252, 252, 252, 1);
@@ -641,12 +647,15 @@ body {
   border: none;
 }
 
-.modal-btn-cross:hover .modal-icon-cross,
-.modal-btn-cross:focus .modal-icon-cross {
+.modal-btn-cross:hover > .modal-icon-cross {
+  fill: #ffffff;
+}
+.modal-btn-cross:focus > .modal-icon-cross {
   fill: #ffffff;
 }
 
 .modal-icon-cross {
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -754,7 +763,7 @@ body {
   fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type="checkbox"]:checked + .checkbox-label .policy-chackbox {
+input[type="checkbox"]:checked + .checkbox-label .policy-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -779,7 +788,7 @@ input[type="checkbox"]:checked + .checkbox-label .policy-chackbox {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   text-align: center;
   padding: 16px 32px;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
 }
 .btn-submit:hover,
 .btn-submit:focus .btn-submit:active {
