--- a/css/styles.css
+++ b/css/styles.css
@@ -748,6 +748,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
+
 .policy-checkbox {
   width: 16px;
   height: 16px;
@@ -758,9 +759,9 @@ body {
   justify-content: center;
   margin-right: 8px;
   fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type="checkbox"]:checked + .checkbox-label .policy-checkbox {
